--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,28 @@
 body {
-    background-color: #231F20;
+    background-color: #181a1b;
+    color: white;
+}
+
+a {
+    color: #0066a4;
+}
+
+a:visited {
+    color: #9c09a1;
+}
+
+form {
+    margin-bottom: 20px;
 }
 
 table {
+    border-collapse: collapse;
+}
+
+table,th, td {
     border: 2px solid #F7941D;
-    color: aqua;
+}
+
+th, td {
+    padding: 5px;
 }
