--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,10 +34,6 @@ form {
     margin-bottom: 20px;
 }
 
-input[type="submit"] {
-    margin: 10px 0 0 30%;
-}
-
 fieldset {
     display: inline;
     border-radius: 5px;
@@ -77,4 +73,8 @@ th, td {
 
 #main_menu a {
     padding-right: 20px;
+}
+
+#main_menu button a {
+    padding-right: 0px;
 }
