--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,8 @@ body {
     background-color: #181a1b;
     color: white;
     padding-bottom: 200px;
+    width: 1080px;
+    margin: auto;
 }
 
 h1 {
