--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,3 +114,27 @@ section, main {
     padding: 10px;
     margin-bottom: 10px;
 }
+
+@media screen and (max-width: 890px) {
+    section, main {
+        margin-right: 15%;
+    }
+}
+
+@media screen and (max-width: 830px) {
+    section, main {
+        margin-right: 10%;
+    }
+}
+
+@media screen and (max-width: 780px) {
+    section, main {
+        margin-right: 5%;
+    }
+}
+
+@media screen and (max-width: 740px) {
+    section, main {
+        margin-right: 10px;
+    }
+}
